# genesis-platform

./: .dockerignore  .gitignore  ENDR.yaml  Makefile  README.md  SVCS.yaml  idp-config.yaml  services-config.yaml  tars-svcs-check.json
ENDR/: README.md  pyproject.toml
ENDR/BSTG/: INTEGRATION.md  README.md  catalog-info.yaml
ENDR/BSTG/app/: app-config.yaml  catalog-info.yaml
ENDR/BSTG/templates/create-service/: template.yaml
ENDR/CASE/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
ENDR/CASE/.next-dev/: app-build-manifest.json  trace
ENDR/CASE/chart/: Chart.yaml  values.yaml
ENDR/CASE/src/: README.md
ENDR/PLEX/: Dockerfile  README.md  __init__.py  plex.py  router.py  transactions.py
ENDR/PLEX/chart/: Chart.yaml  values.yaml
ENDR/SCPT/: Makefile  README.md  bootstrap.sh  cloudflare-tunnel.sh  dev-stack.sh  down.sh  port-forward.sh  smoke-test.sh  validate-config.sh
ENDR/SCPT/ci/: README.md
ENDR/TARS/: README.md  TARS.py
ENDR/TARS/cli/: svcs_check.py
ENDR/TARS/config/: README.md  loader.py  models.py  paths.py
ENDR/TARS/scaffold/: github_client.py  service.py
ENDR/app/: README.md  __init__.py  main.py
ENDR/app/config/: README.md  loader.py  models.py
ENDR/app/scaffold/: README.md  github_client.py  service.py
ENDR/charts/endr-case/: values.yaml
ENDR/endr_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ENDR/idp_api.egg-info/: PKG-INFO  requires.txt
apps/idp-api/: README.md  pyproject.toml
apps/idp-api/app/: main.py
apps/idp-api/idp_api.egg-info/: SOURCES.txt
(+506 files in other folders)
